--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="row">
       <div class="col-md-12 col-sm-12">
         <div class="who text-right">
-          <img src="/assets/img/01.jpg" alt="" class="img-circle">
+          <!-- <img src="/assets/img/01.jpg" alt="" class="img-circle"> -->
 
           <p><span>Камиль Рамазанов,</span><br>frontend developer<br>и ярый фанат CSS</p>
         </div>
@@ -30,7 +30,7 @@
     <!-- MAIN -->
     <main class="row">
       <div class="col-lg-6 col-md-7 col-sm-12 col-lg-offset-4 col-md-offset-4">
-        <section class="map">
+        <!-- <section class="map">
           <h2>Карта сайта</h2>
 
           <ul class="list-unstyled">
@@ -40,7 +40,7 @@
             <li><a href="#!">Наработки</a></li>
           </ul>
         </section>
-        <hr>
+        <hr> -->
 
         <section class="about">
           <h2>Обо мне</h2>
@@ -102,7 +102,7 @@
           <div class="social">
             <ul class="list-unstyled">
               <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank"></a></li>
-              <li><a href="https://telegram.com/bellgance" target="_blank"><i class="fa fa-telegram fa-lg"></i></a></li>
+              <li><a href="https://t.me/bellgance" target="_blank"><i class="fa fa-telegram fa-lg"></i></a></li>
               <li><a href="https://moikrug.ru/bellgance" target="_blank"></a></li>
               <li><a href="https://github.com/bellgance/" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
             </ul>
@@ -117,6 +117,7 @@
 
   <script src="/assets/js/jquery-3.2.1.min.js" charset="utf-8"></script>
   <script src="/assets/js/bootstrap.min.js" charset="utf-8"></script>
+  <script src="/assets/js/parallax.min.js" charset="utf-8"></script>
   <script src="/assets/js/scripts.js" charset="utf-8"></script>
 </body>
 
