Fixed some bugs in header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="who text-right">
           <!-- <img src="/assets/img/01.jpg" alt="" class="img-circle"> -->
 
-          <p><span>Камиль Рамазанов,</span><br>frontend developer<br>и ярый фанат CSS</p>
+          <p><span>Камиль Рамазанов,</span><br>frontend developer</p>
+          <p><i>программирую на HTML,<br>скриптую на CSS</i></p>
         </div>
       </div>
     </header>
