Added text and styles for sections about and portfolio. Footer is commented

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <div class="wrapper container-fluid">
     <!-- HEADER -->
     <header class="row">
-      <div class="col-md-12 col-sm-12">
+      <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="who text-right">
           <!-- <img src="/assets/img/01.jpg" alt="" class="img-circle"> -->
 
-          <p><span>Камиль Рамазанов,</span><br>frontend developer</p>
+          <h1>Камиль Рамазанов,<br><span>frontend developer</span></h1>
           <p><i>программирую на HTML,<br>скриптую на CSS</i></p>
         </div>
       </div>
@@ -30,26 +30,23 @@
 
     <!-- MAIN -->
     <main class="row">
-      <div class="col-lg-6 col-md-7 col-sm-12 col-lg-offset-4 col-md-offset-4">
-        <!-- <section class="map">
-          <h2>Карта сайта</h2>
-
-          <ul class="list-unstyled">
-            <li><a href="#!">Главная</a></li>
-            <li><a href="#!">Портфолио</a></li>
-            <li><a href="#!">Блог</a></li>
-            <li><a href="#!">Наработки</a></li>
-          </ul>
-        </section>
-        <hr> -->
-
+      <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-0 col-xs-offset-0">
         <section class="about">
           <h2>Обо мне</h2>
 
-          <p></p>
-          <p></p>
+          <p>Привет, меня зовут Камиль Рамазанов. Я HTML-верстальщик, в бывшем студент кафедры "Фундаментальная информатика и информационные технологии". В настоящее время живу в России, в городе Якутске. Работаю в компании <a href="http://dcoach.net/" target="_blank">Digital Coach</a>.</p>
+          <p>В свободное от работы время учусь на различных образовательных интернет курсах и решаю задачи по программированию. Также нравится фотографирование, смотрю аниме, слушаю музыку.</p>
 
-          <p></p>
+          <ul>
+            <li class="list-unstyled"><b>Мои профили:</b></li>
+            <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
+            <li><a href="https://moikrug.ru/bellgance" target="_blank">Мой круг</a></li>
+            <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
+            <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
+            <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
+            <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
+            <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
+          </ul>
         </section>
         <hr>
 
@@ -60,44 +57,44 @@
             <div class="col-sm-6">
               <div class="item">
                 <img src="/assets/img/01.jpg" alt="" class="img-rounded">
-                <h3><a href=""></a></h3>
-                <p></p>
+                <h4><a href="https://github.com/bellgance/panakeia">Panakeia</a></h4>
+                <p>Первый тренировочный лендинг по макету</p>
               </div>
             </div>
 
             <div class="col-sm-6">
               <div class="item">
                 <img src="/assets/img/02.jpg" alt="" class="img-rounded">
-                <h3><a href=""></a></h3>
-                <p></p>
+                <h4><a href="https://github.com/bellgance/bikeshop">Bikeshop</a></h4>
+                <p>Тренировочный лендинг по макету</p>
               </div>
             </div>
 
             <div class="col-sm-6">
               <div class="item">
                 <img src="/assets/img/03.jpg" alt="" class="img-rounded">
-                <h3><a href=""></a></h3>
-                <p></p>
+                <h4><a href="https://github.com/bellgance/corporate-blue">Corporate-blue</a></h4>
+                <p>Первый тренировочный лендинг на Bootstrap 3</p>
               </div>
             </div>
 
             <div class="col-sm-6">
               <div class="item">
                 <img src="/assets/img/04.jpg" alt="" class="img-rounded">
-                <h3><a href=""></a></h3>
-                <p></p>
+                <h4><a href="https://github.com/bellgance/tuneft">Туймаада-Нефть</a></h4>
+                <p>Первый коммерческий лендинг</p>
               </div>
             </div>
           </div>
 
-          <a href="#!">Портфолио</a>
+          <!-- <a href="#!">Развернуть</a> -->
         </section>
       </div>
     </main>
     <!-- //MAIN -->
 
     <!-- FOOTER -->
-    <footer class="row">
+    <!-- <footer class="row">
       <div class="col-sm-12">
         <div class="contact">
           <div class="social">
@@ -112,7 +109,7 @@
 
         <div class="copyright"></div>
       </div>
-    </footer>
+    </footer> -->
   </div>
   <!-- </div> -->
 
