--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- pinterest -->
+  <meta name="p:domain_verify" content="c20d1b07148d4437bcb484c5481ef33b" />
+  <!-- // pinterest -->
 
   <title>Bellgance</title>
 
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/normalize.css">
   <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
@@ -30,7 +34,7 @@
 
     <!-- MAIN -->
     <main class="row">
-      <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-0 col-xs-offset-0">
+      <div class="col-lg-6 col-md-7 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-0 col-xs-offset-0">
         <section class="about">
           <h2>Обо мне</h2>
 
@@ -45,6 +49,7 @@
             <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
             <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
             <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
+            <li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
             <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
           </ul>
         </section>
@@ -54,33 +59,23 @@
           <h2>Портфолио</h2>
 
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-12">
               <div class="item">
-                <img src="/assets/img/01.jpg" alt="" class="img-rounded">
                 <h4><a href="https://github.com/bellgance/panakeia">Panakeia</a></h4>
                 <p>Первый тренировочный лендинг по макету</p>
               </div>
-            </div>
 
-            <div class="col-sm-6">
-              <div class="item">
-                <img src="/assets/img/02.jpg" alt="" class="img-rounded">
+              <div class="item text-right">
                 <h4><a href="https://github.com/bellgance/bikeshop">Bikeshop</a></h4>
                 <p>Тренировочный лендинг по макету</p>
               </div>
-            </div>
 
-            <div class="col-sm-6">
               <div class="item">
-                <img src="/assets/img/03.jpg" alt="" class="img-rounded">
                 <h4><a href="https://github.com/bellgance/corporate-blue">Corporate-blue</a></h4>
                 <p>Первый тренировочный лендинг на Bootstrap 3</p>
               </div>
-            </div>
 
-            <div class="col-sm-6">
-              <div class="item">
-                <img src="/assets/img/04.jpg" alt="" class="img-rounded">
+              <div class="item text-right">
                 <h4><a href="https://github.com/bellgance/tuneft">Туймаада-Нефть</a></h4>
                 <p>Первый коммерческий лендинг</p>
               </div>
