Wild West design

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- pinterest -->
-  <meta name="p:domain_verify" content="c20d1b07148d4437bcb484c5481ef33b" />
-  <!-- // pinterest -->
 
   <title>Bellgance</title>
 
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/normalize.css">
   <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
@@ -22,11 +18,13 @@
     <!-- HEADER -->
     <header class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="who text-right">
-          <!-- <img src="/assets/img/01.jpg" alt="" class="img-circle"> -->
+        <div class="who text-center">
+          <h1>WANTED<br>DEAD or ALIVE</h1>
+          <img src="" class="img-circle" alt="Criminal">
 
-          <h1>Камиль Рамазанов,<br><span>frontend developer</span></h1>
-          <p><i>программирую на HTML,<br>скриптую на CSS</i></p>
+          <h2>BELLGANCE</h2>
+          <h2 class="reward">$<span class="blur">1000</span> REWARD</h2>
+          <!-- <p><i>программирую на HTML,<br>скриптую на CSS</i></p> -->
         </div>
       </div>
     </header>
@@ -36,15 +34,23 @@
     <main class="row">
       <div class="col-lg-6 col-md-7 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-0 col-xs-offset-0">
         <section class="about">
-          <h2>Обо мне</h2>
+          <h2>Characteristics</h2>
+          <ul class="list-unstyled">
+            <li>Assumed name: Kamil Ramazanov</li>
+            <li>Age: 19</li>
+            <li>Career: frontend developer</li>
+            <li>Place of work: <a href="">Digital Coach</a></li>
+            <li>Location: Russian Federation, Yakutsk city</li>
+            <li>Hobbies: online training, watching anime, listening to music</li>
+          </ul>
 
-          <p>Привет, меня зовут Камиль Рамазанов. Я HTML-верстальщик, в бывшем студент кафедры "Фундаментальная информатика и информационные технологии". В настоящее время живу в России, в городе Якутске. Работаю в компании <a href="http://dcoach.net/" target="_blank">Digital Coach</a>.</p>
-          <p>В свободное от работы время учусь на различных образовательных интернет курсах и решаю задачи по программированию. Также нравится фотографирование, смотрю аниме, слушаю музыку.</p>
+          <h2>Wanted for</h2>
+          <p>Recidivist of frontend development<br>Programming mania on html and scripting on css<br>Unfinished projects in Github</p>
 
-          <ul>
-            <li class="list-unstyled"><b>Мои профили:</b></li>
+          <h2>Last seen</h2>
+          <ul class="list-unstyled">
             <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
-            <li><a href="https://moikrug.ru/bellgance" target="_blank">Мой круг</a></li>
+            <li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
             <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
             <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
             <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
@@ -53,9 +59,9 @@
             <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
           </ul>
         </section>
-        <hr>
+        <!-- <hr> -->
 
-        <section class="portfolio">
+        <!-- <section class="portfolio">
           <h2>Портфолио</h2>
 
           <div class="row">
@@ -82,35 +88,16 @@
             </div>
           </div>
 
-          <!-- <a href="#!">Развернуть</a> -->
-        </section>
+          <a href="#!">Развернуть</a>
+        </section> -->
       </div>
     </main>
     <!-- //MAIN -->
-
-    <!-- FOOTER -->
-    <!-- <footer class="row">
-      <div class="col-sm-12">
-        <div class="contact">
-          <div class="social">
-            <ul class="list-unstyled">
-              <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank"></a></li>
-              <li><a href="https://t.me/bellgance" target="_blank"><i class="fa fa-telegram fa-lg"></i></a></li>
-              <li><a href="https://moikrug.ru/bellgance" target="_blank"></a></li>
-              <li><a href="https://github.com/bellgance/" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="copyright"></div>
-      </div>
-    </footer> -->
   </div>
-  <!-- </div> -->
 
   <script src="/assets/js/jquery-3.2.1.min.js" charset="utf-8"></script>
   <script src="/assets/js/bootstrap.min.js" charset="utf-8"></script>
-  <script src="/assets/js/parallax.min.js" charset="utf-8"></script>
+  <script src="/assets/js/modernizr-2.8.3.min.js" charset="utf-8"></script>
   <script src="/assets/js/scripts.js" charset="utf-8"></script>
 </body>
 
