Changed text in main

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="who text-center">
           <h1>WANTED<br>DEAD or ALIVE</h1>
-          <img src="" class="img-circle" alt="Criminal">
+          <img src="" class="img-rounded" alt="Criminal">
 
           <h2>BELLGANCE</h2>
           <h2 class="reward">$<span class="blur">1000</span> REWARD</h2>
-          <!-- <p><i>программирую на HTML,<br>скриптую на CSS</i></p> -->
         </div>
       </div>
     </header>
@@ -34,62 +33,68 @@
     <main class="row">
       <div class="col-lg-6 col-md-7 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-0 col-xs-offset-0">
         <section class="about">
-          <h2>Characteristics</h2>
-          <ul class="list-unstyled">
-            <li>Assumed name: Kamil Ramazanov</li>
-            <li>Age: 19</li>
-            <li>Career: frontend developer</li>
-            <li>Place of work: <a href="">Digital Coach</a></li>
-            <li>Location: Russian Federation, Yakutsk city</li>
-            <li>Hobbies: online training, watching anime, listening to music</li>
-          </ul>
+          <section class="characteristics">
+            <h2>Characteristics</h2>
 
-          <h2>Wanted for</h2>
-          <p>Recidivist of frontend development<br>Programming mania on html and scripting on css<br>Unfinished projects in Github</p>
+            <ul class="list-unstyled">
+              <li>Assumed name: Kamil Ramazanov</li>
+              <li>Age: 19</li>
+              <li>Career: frontend developer</li>
+              <li>Place of work: <a href="">Digital Coach</a></li>
+              <li>Location: Russian Federation, Yakutsk city</li>
+              <li>Hobbies: online training, watching anime, listening to music</li>
+            </ul>
+          </section>
 
-          <h2>Last seen</h2>
-          <ul class="list-unstyled">
-            <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
-            <li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
-            <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
-            <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
-            <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
-            <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
-            <li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
-            <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
-          </ul>
+          <section class="skills">
+            <h2>Marshals, be careful</h2>
+
+            <p>This criminal has several skills:</p>
+            <ul>
+              <li>HTML, HTML5</li>
+              <li>CSS, CSS3, Less</li>
+              <li>Git, SVN</li>
+              <li>Twitter Bootstrap</li>
+              <li>Flexbox</li>
+              <li>CSS animation</li>
+              <li>Adaptive layout (media queries)</li>
+              <li>Cross-browser layout</li>
+              <li>Semantic layout</li>
+              <li>Linux</li>
+            </ul>
+          </section>
+
+          <section class="crimes">
+            <h2>Wanted for</h2>
+
+            <p><a href="https://github.com/bellgance/panakeia">Panakeia</a> - the first training crime.</p>
+            <p><a href="https://github.com/bellgance/bikeshop">Bikeshop</a> - the second training crime.</p>
+            <p><a href="https://github.com/bellgance/corporate-blue">Corporate-blue</a> - the first training crime on Bootstrap.</p>
+            <p><a href="https://github.com/bellgance/tuneft">Tuneft</a> - the first commercial crime.</p>
+
+            <p>Also,</p>
+            <ul>
+              <li>Recidivist of frontend development</li>
+              <li>Programming mania on html and scripting on css</li>
+              <li>Unfinished projects in Github</li>
+            </ul>
+          </section>
+
+          <section class="last-seen">
+            <h2>Last seen</h2>
+
+            <ul class="list-unstyled">
+              <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
+              <li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
+              <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
+              <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
+              <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
+              <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
+              <li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
+              <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
+            </ul>
+          </section>
         </section>
-        <!-- <hr> -->
-
-        <!-- <section class="portfolio">
-          <h2>Портфолио</h2>
-
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="item">
-                <h4><a href="https://github.com/bellgance/panakeia">Panakeia</a></h4>
-                <p>Первый тренировочный лендинг по макету</p>
-              </div>
-
-              <div class="item text-right">
-                <h4><a href="https://github.com/bellgance/bikeshop">Bikeshop</a></h4>
-                <p>Тренировочный лендинг по макету</p>
-              </div>
-
-              <div class="item">
-                <h4><a href="https://github.com/bellgance/corporate-blue">Corporate-blue</a></h4>
-                <p>Первый тренировочный лендинг на Bootstrap 3</p>
-              </div>
-
-              <div class="item text-right">
-                <h4><a href="https://github.com/bellgance/tuneft">Туймаада-Нефть</a></h4>
-                <p>Первый коммерческий лендинг</p>
-              </div>
-            </div>
-          </div>
-
-          <a href="#!">Развернуть</a>
-        </section> -->
       </div>
     </main>
     <!-- //MAIN -->
