--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Bellgance</title>
 
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -31,7 +31,7 @@
 
     <!-- MAIN -->
     <main class="row">
-      <div class="col-lg-6 col-md-7 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-0 col-xs-offset-0">
+      <div class="col-lg-6 col-md-7 col-sm-10 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-1 col-xs-offset-0">
         <section class="about">
           <section class="characteristics">
             <h2>Characteristics</h2>
@@ -59,8 +59,9 @@
               <li>CSS animation</li>
               <li>Adaptive layout (media queries)</li>
               <li>Cross-browser layout</li>
+              <li>Valid layout</li>
               <li>Semantic layout</li>
-              <li>Linux</li>
+              <li>Linux (Ubuntu)</li>
             </ul>
           </section>
 
@@ -98,8 +99,23 @@
       </div>
     </main>
     <!-- //MAIN -->
+
+    <!-- FOOTER -->
+    <footer class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="share text-center">
+          <p>Tell other marshals</p>
+
+          <div class="ya-share2" data-services="vkontakte,facebook,twitter,whatsapp,telegram"></div>
+        </div>
+      </div>
+    </footer>
+    <!-- // FOOTER -->
   </div>
 
+
+  <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+  <script src="//yastatic.net/share2/share.js"></script>
   <script src="/assets/js/jquery-3.2.1.min.js" charset="utf-8"></script>
   <script src="/assets/js/bootstrap.min.js" charset="utf-8"></script>
   <script src="/assets/js/modernizr-2.8.3.min.js" charset="utf-8"></script>
