--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <title>Bellgance</title>
 
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -37,12 +36,12 @@
             <h2>Characteristics</h2>
 
             <ul class="list-unstyled">
-              <li>Assumed name: Kamil Ramazanov</li>
+              <li>Assumed name: Kamil' Ramazanov</li>
               <li>Age: 19</li>
               <li>Career: frontend developer</li>
-              <li>Place of work: <a href="">Digital Coach</a></li>
+              <li>Place of work: <del><a href="http://dcoach.net/">Digital Coach</a></del>, freelance</li>
               <li>Location: Russian Federation, Yakutsk city</li>
-              <li>Hobbies: online training, watching anime, listening to music</li>
+              <li>Hobbies: search for errors in the code on various sites, online training, watching anime, listening to music</li>
             </ul>
           </section>
 
