Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li>Assumed name: Kamil' Ramazanov</li>
               <li>Age: 19</li>
               <li>Career: frontend developer</li>
-              <li>Place of work: <del><a href="http://dcoach.net/">Digital Coach</a></del>, freelance</li>
+              <li>Bandit grouping: <del><a href="http://dcoach.net/">Digital Coach</a> (3 mounth)</del>, freelance</li>
               <li>Location: Russian Federation, Yakutsk city</li>
               <li>Hobbies: search for errors in the code on various sites, online training, watching anime, listening to music</li>
             </ul>
@@ -48,12 +48,12 @@
           <section class="skills">
             <h2>Marshals, be careful</h2>
 
-            <p>This criminal has several skills:</p>
+            <p>This criminal uses for the murders following arsenal:</p>
             <ul>
               <li>HTML, HTML5</li>
               <li>CSS, CSS3, Less</li>
               <li>Git, SVN</li>
-              <li>Twitter Bootstrap</li>
+              <li>Bootstrap</li>
               <li>Flexbox</li>
               <li>CSS animation</li>
               <li>Adaptive layout (media queries)</li>
@@ -75,7 +75,7 @@
             <p>Also,</p>
             <ul>
               <li>Recidivist of frontend development</li>
-              <li>Programming mania on html and scripting on css</li>
+              <li>Unbearable desire to program in HTML and scripting on the CSS</li>
               <li>Unfinished projects in Github</li>
             </ul>
           </section>
