--- a/index.html
+++ b/index.html
@@ -26,78 +26,147 @@
         </div>
       </div>
     </header>
-    <!-- //HEADER -->
+    <!-- // HEADER -->
+
+    <!-- ASIDE -->
+    <aside class="hidden row">
+      <div class="npl col-md-12 col-sm-12 col-xs-12">
+        <nav>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!"></a>
+            </li>
+
+            <li>
+              <a href="#!"></a>
+            </li>
+
+            <li>
+              <a href="#!"></a>
+            </li>
+
+            <li>
+              <a href="#!"></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
+    <!-- // ASIDE -->
 
     <!-- MAIN -->
     <main class="row">
       <div class="col-lg-6 col-md-7 col-sm-10 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-1 col-xs-offset-0">
-        <section class="about">
-          <section class="characteristics">
-            <h2>Characteristics</h2>
+        <section class="characteristics">
+          <h2>Characteristics</h2>
 
-            <ul class="list-unstyled">
-              <li>Assumed name: Kamil' Ramazanov</li>
-              <li>Age: 19</li>
-              <li>Career: frontend developer</li>
-              <li>Bandit grouping: <del><a href="http://dcoach.net/">Digital Coach</a> (3 mounth)</del>, freelance</li>
-              <li>Location: Russian Federation, Yakutsk city</li>
-              <li>Hobbies: search for errors in the code on various sites, online training, watching anime, listening to music</li>
-            </ul>
-          </section>
+          <ul class="list-unstyled">
+            <li>Assumed name: Kamil' Ramazanov</li>
+            <li>Age: 19</li>
+            <li>Career: frontend developer</li>
+            <li>Bandit grouping: freelance</li>
+            <li>Location: Russian Federation, Yakutsk city</li>
+            <li>Hobbies: search for errors in the code on various sites, online training, watching anime, listening to music</li>
+          </ul>
+        </section>
+        <hr>
 
-          <section class="skills">
-            <h2>Marshals, be careful</h2>
+        <section class="skills">
+          <h2>Marshals, be careful</h2>
 
-            <p>This criminal uses for the murders following arsenal:</p>
-            <ul>
-              <li>HTML, HTML5</li>
-              <li>CSS, CSS3, Less</li>
-              <li>Git, SVN</li>
-              <li>Bootstrap</li>
-              <li>Flexbox</li>
-              <li>CSS animation</li>
-              <li>Adaptive layout (media queries)</li>
-              <li>Cross-browser layout</li>
-              <li>Valid layout</li>
-              <li>Semantic layout</li>
-              <li>Linux (Ubuntu)</li>
-            </ul>
-          </section>
+          <p>This criminal uses for the murders following arsenal:</p>
+          <div class="row">
+            <div class="col-sm-6 col-xs-12">
+              <ul class="list-unstyled">
+                <li>&#10026; HTML, HTML5</li>
+                <li>&#9733; CSS, CSS3, Less</li>
+                <li>&#10026; Git, SVN</li>
+                <li>&#9733; Bootstrap</li>
+                <li>&#10026; Flexbox</li>
+                <li>&#9733; CSS animation</li>
+              </ul>
+            </div>
 
-          <section class="crimes">
-            <h2>Wanted for</h2>
+            <div class="col-sm-6 col-xs-12">
+              <ul class="list-unstyled">
+                <li>&#9733; Adaptive layout (media queries)</li>
+                <li>&#10026; Cross-browser layout</li>
+                <li>&#9733; Valid layout</li>
+                <li>&#10026; Semantic layout</li>
+                <li>&#9733; Chrome Dev Tools</li>
+                <li>&#10026; Linux (Ubuntu)</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <hr>
 
-            <p><a href="https://github.com/bellgance/panakeia">Panakeia</a> - the first training crime.</p>
-            <p><a href="https://github.com/bellgance/bikeshop">Bikeshop</a> - the second training crime.</p>
-            <p><a href="https://github.com/bellgance/corporate-blue">Corporate-blue</a> - the first training crime on Bootstrap.</p>
-            <p><a href="https://github.com/bellgance/tuneft">Tuneft</a> - the first commercial crime.</p>
+        <section class="crimes">
+          <h2>Wanted for</h2>
 
-            <p>Also,</p>
-            <ul>
-              <li>Recidivist of frontend development</li>
-              <li>Unbearable desire to program in HTML and scripting on the CSS</li>
-              <li>Unfinished projects in Github</li>
-            </ul>
-          </section>
+          <ul class="list-unstyled">
+            <li>&#10026; Recidivist of frontend development</li>
+            <li>&#9733; Unbearable desire to program in HTML and scripting on the CSS</li>
+            <li>&#10026; Unfinished projects in Github</li>
+          </ul>
 
-          <section class="last-seen">
-            <h2>Last seen</h2>
+          <p>Also,</p>
+          <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+              <div class="work">
+                <a target="_blank" href="http://dcoach.net/"></a>
+                <span>Digital Coach</span>
+              </div>
+            </div>
 
-            <ul class="list-unstyled">
-              <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
-              <li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
-              <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
-              <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
-              <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
-              <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
-              <li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
-              <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
-            </ul>
-          </section>
+            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+              <div class="work">
+                <a target="_blank" href="https://github.com/bellgance/panakeia"></a>
+                <span class="text-center">Panakeia</span>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+              <div class="work">
+                <a target="_blank" href="https://github.com/bellgance/bikeshop"></a>
+                <span class="text-center">Bikeshop</span>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+              <div class="work">
+                <a target="_blank" href="https://github.com/bellgance/corporate-blue"></a>
+                <span class="text-center">Corporate-blue</span>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+              <div class="work">
+                <a target="_blank" href="https://github.com/bellgance/tuneft"></a>
+                <span class="text-center">Tuneft</span>
+              </div>
+            </div>
+          </div>
+        </section>
+        <hr>
+
+        <section class="last-seen">
+          <h2>Last seen</h2>
+
+          <ul class="list-unstyled">
+            <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
+            <li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
+            <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
+            <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
+            <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
+            <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
+            <li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
+            <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
+          </ul>
         </section>
       </div>
     </main>
-    <!-- //MAIN -->
+    <!-- // MAIN -->
 
     <!-- FOOTER -->
     <footer class="row">
