--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
             <div class="col-sm-6 col-xs-12">
               <ul class="list-unstyled">
                 <li>&#10026; HTML, HTML5</li>
-                <li>&#9733; CSS, CSS3, Less</li>
+                <li>&#10026; CSS, CSS3, Less</li>
                 <li>&#10026; Git, SVN</li>
-                <li>&#9733; Bootstrap</li>
+                <li>&#10026; Bootstrap</li>
                 <li>&#10026; Flexbox</li>
-                <li>&#9733; CSS animation</li>
+                <li>&#10026; CSS animation</li>
               </ul>
             </div>
 
             <div class="col-sm-6 col-xs-12">
               <ul class="list-unstyled">
-                <li>&#9733; Adaptive layout (media queries)</li>
+                <li>&#10026; Adaptive layout (media queries)</li>
                 <li>&#10026; Cross-browser layout</li>
-                <li>&#9733; Valid layout</li>
+                <li>&#10026; Valid layout</li>
                 <li>&#10026; Semantic layout</li>
-                <li>&#9733; Chrome Dev Tools</li>
+                <li>&#10026; Chrome Dev Tools</li>
                 <li>&#10026; Linux (Ubuntu)</li>
               </ul>
             </div>
@@ -106,7 +106,7 @@
 
           <ul class="list-unstyled">
             <li>&#10026; Recidivist of frontend development</li>
-            <li>&#9733; Unbearable desire to program in HTML and scripting on the CSS</li>
+            <li>&#10026; Unbearable desire to program in HTML and scripting on the CSS</li>
             <li>&#10026; Unfinished projects in Github</li>
           </ul>
 
@@ -188,6 +188,39 @@
   <script src="/assets/js/bootstrap.min.js" charset="utf-8"></script>
   <script src="/assets/js/modernizr-2.8.3.min.js" charset="utf-8"></script>
   <script src="/assets/js/scripts.js" charset="utf-8"></script>
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function(d, w, c) {
+      (w[c] = w[c] || []).push(function() {
+        try {
+          w.yaCounter46365201 = new Ya.Metrika({
+            id: 46365201,
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+          });
+        } catch (e) {}
+      });
+
+      var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function() {
+          n.parentNode.insertBefore(s, n);
+        };
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+      if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+      } else {
+        f();
+      }
+    })(document, window, "yandex_metrika_callbacks");
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/46365201" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
 </body>
 
 </html>
