--- a/index.html
+++ b/index.html
@@ -1,226 +1,232 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Bellgance</title>
+  <title>Bellgance | Kamil' Ramazanov</title>
 
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
-  <div class="wrapper container-fluid">
-    <!-- HEADER -->
-    <header class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="who text-center">
-          <h1>WANTED<br>DEAD or ALIVE</h1>
-          <img src="" class="img-rounded" alt="Criminal">
+<body class="container-fluid">
+  <header class="row">
+    <div class="col-sm-12 col-xs-12">
+      <nav class="navbar navbar-fixed-top">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav text-center">
+            <li><a href="#top">Hey</a></li>
+            <li><a href="#about">About me</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
 
-          <h2>BELLGANCE</h2>
-          <h2 class="reward">$<span class="blur">1000</span> REWARD</h2>
+            <li class="hidden dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
+                <span class="caret"></span>
+              </a>
+
+              <ul class="dropdown-menu">
+                <li><a href="#">Page 1-1</a></li>
+                <li><a href="#">Page 1-2</a></li>
+                <li><a href="#">Page 1-3</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <main id="index">
+    <section id="top" class="top row">
+      <div class="col-sm-6 col-xs-12">
+        <div class="whoiam">
+          <h1 class="sketch">Hi, my name is Kamil' Ramazanov</h1>
+          <h2 class="sketch">I'm frontend developer</h2>
         </div>
       </div>
-    </header>
-    <!-- // HEADER -->
 
-    <!-- ASIDE -->
-    <aside class="hidden row">
-      <div class="npl col-md-12 col-sm-12 col-xs-12">
-        <nav>
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!"></a>
-            </li>
-
-            <li>
-              <a href="#!"></a>
-            </li>
-
-            <li>
-              <a href="#!"></a>
-            </li>
-
-            <li>
-              <a href="#!"></a>
-            </li>
-          </ul>
-        </nav>
+      <div class="col-sm-6 col-xs-12">
+        <div class="photo">
+          <img src="" alt="">
+        </div>
       </div>
-    </aside>
-    <!-- // ASIDE -->
+    </section>
 
-    <!-- MAIN -->
-    <main class="row">
-      <div class="col-lg-6 col-md-7 col-sm-10 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-1 col-xs-offset-0">
-        <section class="characteristics">
-          <h2>Characteristics</h2>
+    <section id="about" class="about row">
+      <div class="col-sm-12 col-xs-12">
+        <h2 class="text-center underline">About me</h2>
+        <div class="spacer50"></div>
 
-          <ul class="list-unstyled">
-            <li>Assumed name: Kamil' Ramazanov</li>
-            <li>Age: 19</li>
-            <li>Career: frontend developer</li>
-            <li>Bandit grouping: freelance</li>
-            <li>Location: Russian Federation, Yakutsk city</li>
-            <li>Hobbies: search for errors in the code on various sites, online training, watching anime, listening to music</li>
-          </ul>
-        </section>
-        <hr>
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2 col-xs-12">
+            <section class="des">
+              <h3 class="text-center">About</h3>
+              <div class="spacer25"></div>
 
-        <section class="skills">
-          <h2>Marshals, be careful</h2>
+              <p>Hi again. I'm engaged in frontend development, more knowledge of semantic HTML layout skills.</p>
+              <p>For some time I studied at the university, now I am studying myself.</p>
+              <p>Up to six months I worked in a marketing agency as a frontend developer, where i was sent and trained. Now I work in freelancing.</p>
+              <p>Knowledge of English at the level of reading technical documentation.</p>
+            </section>
 
-          <p>This criminal uses for the murders following arsenal:</p>
-          <div class="row">
-            <div class="col-sm-6 col-xs-12">
-              <ul class="list-unstyled">
-                <li>&#10026; HTML, HTML5</li>
-                <li>&#10026; CSS, CSS3, Less</li>
-                <li>&#10026; Git, SVN</li>
-                <li>&#10026; Bootstrap</li>
-                <li>&#10026; Flexbox</li>
-                <li>&#10026; CSS animation</li>
-              </ul>
-            </div>
-
-            <div class="col-sm-6 col-xs-12">
-              <ul class="list-unstyled">
-                <li>&#10026; Adaptive layout (media queries)</li>
-                <li>&#10026; Cross-browser layout</li>
-                <li>&#10026; Valid layout</li>
-                <li>&#10026; Semantic layout</li>
-                <li>&#10026; Chrome Dev Tools</li>
-                <li>&#10026; Linux (Ubuntu)</li>
-              </ul>
-            </div>
+            <div class="spacer50"></div>
           </div>
-        </section>
-        <hr>
 
-        <section class="crimes">
-          <h2>Wanted for</h2>
+          <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+            <section class="skills">
+              <h3 class="text-center">Skills</h3>
+              <div class="spacer25"></div>
 
-          <ul class="list-unstyled">
-            <li>&#10026; Recidivist of frontend development</li>
-            <li>&#10026; Unbearable desire to program in HTML and scripting on the CSS</li>
-            <li>&#10026; Unfinished projects in Github</li>
-          </ul>
+              <div class="row">
+                <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      HTML
+                    </div>
+                  </div>
 
-          <p>Also,</p>
-          <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-              <div class="work">
-                <a target="_blank" href="http://dcoach.net/"></a>
-                <span>Digital Coach</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      CSS
+                    </div>
+                  </div>
+
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      CSS
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      HTML
+                    </div>
+                  </div>
+
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      CSS
+                    </div>
+                  </div>
+
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      CSS
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      HTML
+                    </div>
+                  </div>
+
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      CSS
+                    </div>
+                  </div>
+
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      CSS
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-              <div class="work">
-                <a target="_blank" href="https://github.com/bellgance/panakeia"></a>
-                <span class="text-center">Panakeia</span>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-              <div class="work">
-                <a target="_blank" href="https://github.com/bellgance/bikeshop"></a>
-                <span class="text-center">Bikeshop</span>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-              <div class="work">
-                <a target="_blank" href="https://github.com/bellgance/corporate-blue"></a>
-                <span class="text-center">Corporate-blue</span>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-              <div class="work">
-                <a target="_blank" href="https://github.com/bellgance/tuneft"></a>
-                <span class="text-center">Tuneft</span>
-              </div>
-            </div>
+              <div class="spacer50"></div>
+            </section>
           </div>
-        </section>
-        <hr>
 
-        <section class="last-seen">
-          <h2>Last seen</h2>
+          <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+            <section class="des">
+              <h3 class="text-center">Fields of expertise</h3>
+              <div class="spacer25"></div>
 
-          <ul class="list-unstyled">
+              <div class="row">
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </div>
+
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </div>
+
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+
+            <div class="spacer50"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio" class="portfolio row">
+      <div class="col-sm-12 col-xs-12">
+        <h2 class="text-center underline">Portfolio</h2>
+        <div class="spacer50"></div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="row">
+    <div class="col-sm-8 col-sm-offset-2 col-xs-11 col-xs-offset-1">
+      <div class="row">
+        <div class="col-sm-6 col-xs-12">
+          <ul class="list-unstyled text-right">
             <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
             <li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
             <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
             <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
+          </ul>
+        </div>
+
+        <div class="col-sm-6 col-xs-12">
+          <ul class="list-unstyled text-left">
             <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
             <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
             <li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
             <li><a href="https://myanimelist.net/animelist/Bellgance" target="_blank">MyAnimeList</a></li>
           </ul>
-        </section>
-      </div>
-    </main>
-    <!-- // MAIN -->
-
-    <!-- FOOTER -->
-    <footer class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="share text-center">
-          <p>Tell other marshals</p>
-
-          <div class="ya-share2" data-services="vkontakte,facebook,twitter,whatsapp,telegram"></div>
         </div>
       </div>
-    </footer>
-    <!-- // FOOTER -->
-  </div>
+      <div class="spacer25"></div>
 
+      <div class="row">
+        <div class="col-sm-12 col-xs-12">
+          <p class="created text-center">Created by <a href="https://github.com/bellgance" target="_blank">Bellgance</a><br>with using Bootstrap 3, modernizr.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-  <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
-  <script src="//yastatic.net/share2/share.js"></script>
-  <script src="/assets/js/jquery-3.2.1.min.js" charset="utf-8"></script>
-  <script src="/assets/js/bootstrap.min.js" charset="utf-8"></script>
-  <script src="/assets/js/modernizr-2.8.3.min.js" charset="utf-8"></script>
-  <script src="/assets/js/scripts.js" charset="utf-8"></script>
-
-  <!-- Yandex.Metrika counter -->
-  <script type="text/javascript">
-    (function(d, w, c) {
-      (w[c] = w[c] || []).push(function() {
-        try {
-          w.yaCounter46365201 = new Ya.Metrika({
-            id: 46365201,
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true
-          });
-        } catch (e) {}
-      });
-
-      var n = d.getElementsByTagName("script")[0],
-        s = d.createElement("script"),
-        f = function() {
-          n.parentNode.insertBefore(s, n);
-        };
-      s.type = "text/javascript";
-      s.async = true;
-      s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-      if (w.opera == "[object Opera]") {
-        d.addEventListener("DOMContentLoaded", f, false);
-      } else {
-        f();
-      }
-    })(document, window, "yandex_metrika_callbacks");
-  </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/46365201" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  <!-- /Yandex.Metrika counter -->
+  <script src="/js/jquery-3.2.1.min.js" charset="utf-8"></script>
+  <script src="/js/bootstrap.min.js" charset="utf-8"></script>
+  <script src="/js/modernizr-2.8.3.min.js" charset="utf-8"></script>
+  <script src="/js/scripts.js" charset="utf-8"></script>
 </body>
 
 </html>
