--- a/index.html
+++ b/index.html
@@ -13,49 +13,43 @@
 </head>
 
 <body class="container-fluid">
-  <header class="row">
-    <div class="col-sm-12 col-xs-12">
-      <nav class="navbar navbar-fixed-top">
-        <div class="container-fluid">
-          <ul class="nav navbar-nav text-center">
-            <li><a href="#top">Hey</a></li>
-            <li><a href="#about">About me</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+  <header>
+    <nav class="navbar navbar-fixed-top">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav text-center">
+          <li><a href="#top">Hey</a></li>
+          <li><a href="#about">About me</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
 
-            <li class="hidden dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
-                <span class="caret"></span>
-              </a>
+          <li class="hidden dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
+              <span class="caret"></span>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="#">Page 1-1</a></li>
-                <li><a href="#">Page 1-2</a></li>
-                <li><a href="#">Page 1-3</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+            <ul class="dropdown-menu">
+              <li><a href="#">Page 1-1</a></li>
+              <li><a href="#">Page 1-2</a></li>
+              <li><a href="#">Page 1-3</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
   <main id="index">
     <section id="top" class="top row">
-      <div class="col-sm-6 col-xs-12">
+      <div class="col-sm-12 col-xs-12">
         <div class="whoiam">
-          <h1 class="sketch">Hi, my name is Kamil' Ramazanov</h1>
-          <h2 class="sketch">I'm frontend developer</h2>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-xs-12">
-        <div class="photo">
-          <img src="" alt="">
+          <h1 class="sketch text-center">Hi, my name is Kamil' Ramazanov</h1>
+          <h2 class="sketch text-center">I'm frontend developer</h2>
         </div>
       </div>
     </section>
 
     <section id="about" class="about row">
+      <div class="spacer50"></div>
+
       <div class="col-sm-12 col-xs-12">
         <h2 class="text-center underline">About me</h2>
         <div class="spacer50"></div>
@@ -83,71 +77,53 @@
               <div class="row">
                 <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      HTML
+                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                      HTML5
                     </div>
                   </div>
 
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      CSS
-                    </div>
-                  </div>
-
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      CSS
+                      CSS3
                     </div>
                   </div>
                 </div>
 
                 <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      HTML
+                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                      Bootstrap 3
                     </div>
                   </div>
 
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      CSS
-                    </div>
-                  </div>
-
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      CSS
+                    <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
+                      JS
                     </div>
                   </div>
                 </div>
 
                 <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      HTML
+                    <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
+                      Jquery
                     </div>
                   </div>
 
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      CSS
-                    </div>
-                  </div>
-
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      CSS
+                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
+                      Photoshop (cutting layout)
                     </div>
                   </div>
                 </div>
               </div>
 
-              <div class="spacer50"></div>
+              <div class="hidden WHILE-EXPERTISE-HIDDEN spacer50"></div>
             </section>
           </div>
 
           <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-            <section class="des">
+            <section class="hidden expertise">
               <h3 class="text-center">Fields of expertise</h3>
               <div class="spacer25"></div>
 
@@ -177,20 +153,147 @@
                 </div>
               </div>
             </section>
-
-            <div class="spacer50"></div>
           </div>
         </div>
       </div>
     </section>
 
     <section id="portfolio" class="portfolio row">
+      <div class="spacer50"></div>
+
       <div class="col-sm-12 col-xs-12">
         <h2 class="text-center underline">Portfolio</h2>
         <div class="spacer50"></div>
+
+        <div class="row">
+          <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-o">
+            <div class="equal-h row">
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Digital Coach</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap 3</li>
+                        <li>CSS animations</li>
+                        <li>Flexbox</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="http://dcoach.net/" target="_blank">View website</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Tuneft</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>Bootstrap 3</li>
+                        <li>Flexbox</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://github.com/Bellgance/tuneft" target="_blank">View website</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Bizkvit</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>Bootstrap 3</li>
+                        <li>Media queries</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://github.com/Bellgance/bizkvit" target="_blank">View website</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Corporate-blue</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap 3</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://bellgance.github.io/corporate-blue/" target="_blank">View website</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Bikeshop</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Media queries</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://bellgance.github.io/bikeshop/" target="_blank">View website</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Panakeia</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Flexbox</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://bellgance.github.io/panakeia/" target="_blank">View website</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
+  <div class="spacer100"></div>
 
   <footer class="row">
     <div class="col-sm-8 col-sm-offset-2 col-xs-11 col-xs-offset-1">
