Fixed orphograthic bug

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
               <div class="spacer25"></div>
 
               <p>Hi again. I'm engaged in frontend development, more knowledge of semantic HTML layout skills.</p>
-              <p>For some time I studied at the university, now I am studying myself.</p>
-              <p>Up to six months I worked in a marketing agency as a frontend developer, where i was sent and trained. Now I work in freelancing.</p>
+              <p>For some time i studied at the university, now i am studying myself.</p>
+              <p>Up to six months i worked in a marketing agency as a frontend developer, where i was sent and trained. Now i work in freelancing.</p>
               <p>Knowledge of English at the level of reading technical documentation.</p>
             </section>
 
