Fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               <h3 class="text-center">About</h3>
               <div class="spacer25"></div>
 
-              <p>Hi again. I'm engaged in frontend development, more knowledge of semantic HTML layout skills.</p>
-              <p>For some time i studied at the university, now i am studying myself.</p>
-              <p>Up to six months i worked in a marketing agency as a frontend developer, where i was sent and trained. Now i work in freelancing.</p>
+              <p>Hi again. I'm engaged in frontend development: HTML5, CSS3, Javascript and other technologies.</p>
+              <p>I studied at the North East Federal University on the specialty "Fundamental Informatics and Information Technology" for a while. Now I am engaged in self-study.</p>
+              <p>Up to six months i worked in a marketing agency as a frontend developer, where me trained. Now i work in freelance.</p>
               <p>Knowledge of English at the level of reading technical documentation.</p>
             </section>
 
