Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="col-sm-12 col-xs-12">
         <div class="whoiam">
           <h1 class="sketch text-center">Hi, my name is Kamil' Ramazanov</h1>
-          <h2 class="sketch text-center">I'm frontend developer</h2>
+          <h2 class="sketch text-center">I'm a frontend developer</h2>
         </div>
       </div>
     </section>
@@ -62,7 +62,7 @@
 
               <p>Hi again. I'm engaged in frontend development: HTML5, CSS3, Javascript and other technologies.</p>
               <p>I studied at the North East Federal University on the specialty "Fundamental Informatics and Information Technology" for a while. Now I am engaged in self-study.</p>
-              <p>Up to six months i worked in a marketing agency as a frontend developer, where me trained. Now i work in freelance.</p>
+              <p>Up to six months I worked in a marketing agency as a frontend developer, where I trained. Now I’m working as a freelancer.</p>
               <p>Knowledge of English at the level of reading technical documentation.</p>
             </section>
 
@@ -176,6 +176,7 @@
                       <ul class="list-unstyled">
                         <li>HTML</li>
                         <li>CSS</li>
+                        <li>Less</li>
                         <li>Bootstrap 3</li>
                         <li>CSS animations</li>
                         <li>Flexbox</li>
@@ -293,7 +294,7 @@
       </div>
     </section>
   </main>
-  <div class="spacer100"></div>
+  <div class="spacer50"></div>
 
   <footer class="row">
     <div class="col-sm-8 col-sm-offset-2 col-xs-11 col-xs-offset-1">
