--- a/index.html
+++ b/index.html
@@ -194,6 +194,28 @@
                 <div class="card">
                   <div class="top-part">
                     <div class="des">
+                      <h4>ArtSakha</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Less</li>
+                        <li>Javascript</li>
+                        <li>Bootstrap 3</li>
+                        <li>CSS animations</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="http://artsakha.ru/#home" target="_blank">View website</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
                       <h4>Tuneft</h4>
                       <ul class="list-unstyled">
                         <li>HTML</li>
