--- a/index.html
+++ b/index.html
@@ -61,13 +61,22 @@
               <div class="spacer25"></div>
 
               <p>Hi again. I'm engaged in frontend development: HTML5, CSS3, Javascript and other technologies.</p>
-              <p>I studied at the North East Federal University on the specialty "Fundamental Informatics and Information Technology" for a while. Now I am engaged in self-study.</p>
-              <p>Up to six months I worked in a marketing agency as a frontend developer, where I trained. Now I’m working as a freelancer.</p>
+              <p>I studied at the North-Eastern Federal University on the specialty "Fundamental Informatics and Information Technology" for a while. Now I am engaged in self-study.</p>
+              <p>Up to three months I worked in a marketing agency as a frontend developer, where I trained. Now I’m working as a freelancer.</p>
               <p>Knowledge of English at the level of reading technical documentation.</p>
             </section>
 
             <div class="spacer50"></div>
           </div>
+
+          <!-- <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+            <section class="experience">
+              <h3 class="text-center">Experience</h3>
+              <div class="spacer25"></div>
+            </section>
+
+            <div class="spacer50"></div>
+          </div> -->
 
           <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
             <section class="skills">
@@ -117,13 +126,13 @@
                   </div>
                 </div>
               </div>
-
-              <div class="hidden WHILE-EXPERTISE-HIDDEN spacer50"></div>
             </section>
+
+            <!-- <div class="spacer50"></div> -->
           </div>
 
-          <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-            <section class="hidden expertise">
+          <!-- <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+            <section class="expertise">
               <h3 class="text-center">Fields of expertise</h3>
               <div class="spacer25"></div>
 
@@ -153,7 +162,7 @@
                 </div>
               </div>
             </section>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
