--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
         <div class="spacer50"></div>
 
         <div class="row">
-          <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-o">
+          <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+            <h3 class="text-center">Web-sites</h3>
+            <div class="spacer25"></div>
+
             <div class="equal-h row">
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                 <div class="card">
@@ -194,7 +197,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="http://dcoach.net/" target="_blank">View website</a>
+                    <a href="http://dcoach.net/" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -216,7 +219,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="http://artsakha.ru/#home" target="_blank">View website</a>
+                    <a href="http://artsakha.ru/#home" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -237,7 +240,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://github.com/Bellgance/tuneft" target="_blank">View website</a>
+                    <a href="https://github.com/Bellgance/tuneft" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -258,7 +261,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://github.com/Bellgance/bizkvit" target="_blank">View website</a>
+                    <a href="https://github.com/Bellgance/bizkvit" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -277,7 +280,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://bellgance.github.io/corporate-blue/" target="_blank">View website</a>
+                    <a href="https://bellgance.github.io/corporate-blue/" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -296,7 +299,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://bellgance.github.io/bikeshop/" target="_blank">View website</a>
+                    <a href="https://bellgance.github.io/bikeshop/" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -315,7 +318,32 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://bellgance.github.io/panakeia/" target="_blank">View website</a>
+                    <a href="https://bellgance.github.io/panakeia/" target="_blank">View web-site</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="spacer50"></div>
+
+            <h3 class="text-center">Web-applications</h3>
+            <div class="spacer25"></div>
+
+            <div class="equal-h row">
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Counter</h4>
+                      <ul class="list-unstyled">
+                        <li>React.js</li>
+                        <li>Javascript</li>
+                        <li>JSX</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://github.com/bellgance/counter" target="_blank">View web-app</a>
                   </div>
                 </div>
               </div>
