--- a/index.html
+++ b/index.html
@@ -352,8 +352,34 @@
         </div>
       </div>
     </section>
+
+    <section id="mail" class="mail row">
+      <div class="spacer50"></div>
+
+      <div class="col-sm-12 col-xs-12">
+        <h2 class="text-center underline">Send mail to me</h2>
+        <div class="spacer50"></div>
+
+        <div class="row">
+          <div class="col-md-6 col-sm-8 col-xs-10 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">
+            <form class="text-center" action="/php/mail.php" method="POST">
+              <div class="form-group">
+                <input type="text" class="form-control" required name="user_name" placeholder="Your name">
+              </div>
+
+              <div class="form-group">
+                <input type="email" class="form-control" required name="user_email" placeholder="Your email">
+              </div>
+
+              <button type="submit" class="btn btn-primary">Отправить форму</button>
+            </form>
+          </div>
+        </div>
+
+        <div class="spacer80"></div>
+      </div>
+    </section>
   </main>
-  <div class="spacer50"></div>
 
   <footer class="row">
     <div class="col-sm-8 col-sm-offset-2 col-xs-11 col-xs-offset-1">
@@ -416,7 +442,11 @@
       }
     })(document, window, "yandex_metrika_callbacks");
   </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/46419480" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <noscript>
+    <div>
+      <img src="https://mc.yandex.ru/watch/46419480" style="position:absolute; left:-9999px;" alt="" />
+    </div>
+  </noscript>
   <!-- /Yandex.Metrika counter -->
 
   <script src="/js/jquery-3.2.1.min.js" charset="utf-8"></script>
