Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
         <div class="row">
           <div class="col-md-6 col-sm-8 col-xs-10 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">
-            <form class="text-center" action="/php/mail.php" method="POST">
+            <form class="text-center" action="mail.php" method="POST">
               <div class="form-group">
                 <input type="text" class="form-control" required name="user_name" placeholder="Your name">
               </div>
